Problem with Login
I have created the login functions and they are working through Postman but when I try to use them in a browser the website never responds.
What I am trying to do is use a session, a session is assigned if the user logs in with a valid username and password.

--- a/ConcertVenue/views/addConcert.pug
+++ b/ConcertVenue/views/addConcert.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .container
-        form(method="POST" action="/concerts")
+        form(method="POST" action="/concerts/addConcert")
             div.form-group
                 label(for="ArtistName") Artist Name:
                 input#ArtistName.form-control(type="text", name="ArtistName")
