--- a/ConcertVenue/public/stylesheets/style.css
+++ b/ConcertVenue/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+body{
+
+}
+
 
 .navbar {
   margin-bottom:0;
@@ -12,18 +16,9 @@
 }
 
 .card{
-  bottom-margin: 1%;
+  margin-bottom: 1%;
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-}
 
 .card-body{
   padding-top: 2px;
@@ -43,4 +38,35 @@
 .card-image-top{
   padding: 0;
   margin: 0;
+}
+
+/*Login Page*/
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
