--- a/ConcertVenue/views/checkout.pug
+++ b/ConcertVenue/views/checkout.pug
@@ -15,18 +15,28 @@ block content
                         
                 .card.card-outline-secondary.my-4
                     .card-header
-                        | Product Reviews
+                        | Purchase tickets for #{element.ArtistName}
                     .card-body
-                        p
-                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.
-                        small.text-muted Posted by Anonymous on 3/1/17
-                        hr
-                        p
-                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.
-                        small.text-muted Posted by Anonymous on 3/1/17
-                        hr
-                        p
-                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.
-                        small.text-muted Posted by Anonymous on 3/1/17
-                        hr
-                        a.btn.btn-success(href='#') Leave a Review
+                        .col-12
+                            form
+                                label(for='quantity') Ticket Quantity
+                                select#quantity.form-control
+                                    option 1
+                                    option 2
+                                    option 3
+                                    option 4
+                                    option 5
+                                label(for='name') Name for Ticket
+                                input#name.form-control(type="text")
+                                label(for='address1') Address 1
+                                input#address1.form-control(type="text")
+                                label(for='address2') Address 2
+                                input#address2.form-control(type="text")
+                                label(for='address3') Address 3
+                                input#address3.form-control(type="text")
+                                label(for='town') Town
+                                input#town.form-control(type="text")
+                                label(for='county') County
+                                input#county.form-control(type="text")
+                            p
+                            a.btn.btn-success(href='#') Leave a Review
