--- a/ConcertVenue/views/layout.pug
+++ b/ConcertVenue/views/layout.pug
@@ -29,7 +29,7 @@ html(lang='en')
             ul.nav.navbar-nav.navbar-right
 
               li
-                a.nav-link(href='/login')
+                a.nav-link(href='/users/login')
                   span.fas.fa-sign-in-alt
                   |  Login
 
